Fixed mixin font-size 'normal' default parameters was invalid because was wrapped in quotes.

--- a/src/tools/_mixin.font-size.scss
+++ b/src/tools/_mixin.font-size.scss
@@ -37,5 +37,5 @@
     @error "`#{$line-height}` is not a valid value for `$line-height`.";
   }
 
-  line-height: $line-height $important;
+  line-height: unquote($line-height) $important;
 }
